[Amrutha | Jaiganesh | Preeti] Add. no category found exception in get all categories